Archive2/b6/8a766e33520478/output
main.cpp: In instantiation of 'void C::add(T) [with T = std::vector<int>]':
main.cpp:25:9:   required from 'C::C(T&& ...) [with T = {std::vector<int, std::allocator<int> >&}]'
main.cpp:51:10:   required from here
main.cpp:37:31: error: 'class std::vector<int>' has no member named 'get'
     void add(T r) { std::cout << r.get() << std::endl; }
                               ^
